// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`diff-test: roll update == bash oracle > curl happy path → download/extract + setup + changelog, curl argv frozen 1`] = `
{
  "status": 0,
  "stderr": "",
  "stdout": "[roll] Current version: roll v3.609.2
[roll] Upgrading via curl...

[roll] [roll] Downloading roll v9.9.9 ...
[roll] [roll] Extracting ...

[roll] Re-syncing to AI tools...

  SETUP  ·  初始化                                                                                  
────────────────────────────────────────────────────────────────────────────────

  1. ✓  Install templates & conventions to ~/.roll
  2. ✓  Sync conventions to AI tools
  3. ✓  Install skills to ~/.claude
  4. ✓  Initialize peer-review state directory
  5. ↷  Configure git hooks path
  6. ↷  Ensure tmux is installed (already present)

────────────────────────────────────────────────────────────────────────────────
  Setup complete (4 items refreshed)  —  run roll init inside a project
════════════════════════════════════════════════════════════════════════════════

Recent Changes:

  Unreleased

  v3.609.2 — 2026-06-09
    ### 可见性
    - 交付档案首页改表格视图：epic 列表以 Epic / Progress / Stories 表格呈现，扫读对齐更顺（US-DOSSIER-005）
    - 交付档案按证据标完成：迁移来的 V2 历史卡按其标题 ✅ 标记显示为已交付，不再因缺 v3 验收报告而全标未交付（US-DOSSIER-006）
    ### 其他
    - changelog generate 剔除已在某版本段发布的故事，不再在 Unreleased 过度累积；纯 PR / 手工条目保留（FIX-227）
    - roll release ship 的交互确认改为按行读 stdin，不再因等 EOF 在交互终端永久挂起（FIX-228）
    - 把 loop 日志与事件的只读子命令改写为 TS，脱离 bash 回落引擎（US-PORT-022 part 1）

  v3.609.1 — 2026-06-09
    ### 自动化流水线
    - 把 dream 调度剩余子命令改写为 TS，脱离 bash 回落引擎（US-PORT-020）
    - 交付段补可重建证据轻量版，含合并请求与集成结论与改动与交付方与成本与时间线（US-EVID-008）
    - 二阶闭环把成功率趋势回灌做自整定：roll tune 只读聚合 self-score/agent pass 率/误判/rubric 相关性，产阈值-路由-rubric 三类建议（仅建议、样本门+冷却防失真）（US-EVID-015）
    ### 工程和测试
    - 确定性证据自动落盘，测试输出与覆盖率与产物都写进证据框（US-EVID-002）
    - attest 从迁移后的多故事 epic 文件抽取验收条目返回空，致已有 ac-map 的 Done 故事渲染成零条 AC（US-PORT-001 实证），改 resolveStoryAcItems 越过空壳 owner 取真 AC 文件（FIX-226）
    ### 其他
    - 把项目初始化命令改写为 TS，脱离 bash 回落引擎（US-PORT-013）
    - 把技能挂载与约定分发命令改写为 TS，脱离 bash 回落引擎（US-PORT-014）
    - 把在线刷新模型价目的命令改写为 TS，脱离 bash 回落引擎（US-PORT-017）
    - 把切换与设置 agent 的写入命令改写为 TS，脱离 bash 回落引擎（US-PORT-018）
    - 修退役命令引用并立一页新手上手指南（US-DOC-GS-001）
    - 证据框在每个周期开头就立好，运行目录与证据归处先备好交给执行用（US-EVID-001）
    - 瞬态证据当场采，改前改后与验证时各截一张成对入框（US-EVID-003）
    - 收尾时由运行器确定性组装验收报告并刷新档案，不依赖代理记得（US-EVID-004）
    - 验收硬闸默认开启，标完成却无报告从提醒升级为发版闸拦截（US-EVID-005）
    - 证据生命周期相关文档中英双轨刷新收尾（US-EVID-006）
    - 档案脊柱口径对齐，老的已完成卡一次性补跑回填证据（US-EVID-007）
    - 自评分作为评分门禁参与通过与否，回归或低分能真的拦下完成（US-EVID-013）
    - 无人值守执行器，出错先归因再自动纠正，默认保守且不自动合主干且振荡移交刹车 — report: \`.roll/features/acceptance-evidence/US-EVID-014/2026-06-08T23-03-10/US-EVID-014-report.html\`
    - 无人值守安全刹车，同卡反复退回自动熔断暂停并加一页夜间运行晨报 — report: \`.roll/features/acceptance-evidence/US-EVID-016/2026-06-08T23-54-55/US-EVID-016-report.html\`
    - 跨代理结对的中英双轨文档刷新收尾（US-PAIR-007）
    - roll init 顺带生成 pairing 配置并在界面告知，新用户少一步且仍显式（US-PAIR-008）
    - site: roll-build explainer page (site-aligned, bilingual) + homepage CTA（PR#546）
    - site: track site/diagrams/ + roll-build skill infographic（PR#545）
    - site: roll-build 技能卡可点击跳转讲解页（PR#547）

",
}
`;

exports[`diff-test: roll update == bash oracle > curl happy path → download/extract + setup + changelog, curl argv frozen 2`] = `
"-fsSL
https://github.com/seanyao/roll/archive/refs/tags/v9.9.9.tar.gz
-o
<TMP>/roll.tar.gz
"
`;

exports[`diff-test: roll update == bash oracle > curl version-resolve failure → exit 1 (en) 1`] = `
{
  "status": 1,
  "stderr": "[roll] Failed to resolve latest version from GitHub.
You can pin a version with ROLL_VERSION=vX.Y.Z
",
  "stdout": "[roll] Current version: roll v3.609.2
[roll] Upgrading via curl...

",
}
`;

exports[`diff-test: roll update == bash oracle > curl version-resolve failure → exit 1 (zh) 1`] = `
{
  "status": 1,
  "stderr": "[roll] Failed to resolve latest version from GitHub.
You can pin a version with ROLL_VERSION=vX.Y.Z
",
  "stdout": "[roll] 当前版本: roll v3.609.2
[roll] 正在通过 curl 升级...

",
}
`;

exports[`diff-test: roll update == bash oracle > npm happy path → upgrade + setup + changelog (en) 1`] = `
{
  "status": 0,
  "stderr": "",
  "stdout": "[roll] Current version: roll v3.609.2
[roll] Upgrading via npm...


[roll] Re-syncing to AI tools...

  SETUP  ·  初始化                                                                                  
────────────────────────────────────────────────────────────────────────────────

  1. ✓  Install templates & conventions to ~/.roll
  2. ✓  Sync conventions to AI tools
  3. ✓  Install skills to ~/.claude
  4. ✓  Initialize peer-review state directory
  5. ↷  Configure git hooks path
  6. ↷  Ensure tmux is installed (already present)

────────────────────────────────────────────────────────────────────────────────
  Setup complete (4 items refreshed)  —  run roll init inside a project
════════════════════════════════════════════════════════════════════════════════

Recent Changes:

  Unreleased

  v3.609.2 — 2026-06-09
    ### 可见性
    - 交付档案首页改表格视图：epic 列表以 Epic / Progress / Stories 表格呈现，扫读对齐更顺（US-DOSSIER-005）
    - 交付档案按证据标完成：迁移来的 V2 历史卡按其标题 ✅ 标记显示为已交付，不再因缺 v3 验收报告而全标未交付（US-DOSSIER-006）
    ### 其他
    - changelog generate 剔除已在某版本段发布的故事，不再在 Unreleased 过度累积；纯 PR / 手工条目保留（FIX-227）
    - roll release ship 的交互确认改为按行读 stdin，不再因等 EOF 在交互终端永久挂起（FIX-228）
    - 把 loop 日志与事件的只读子命令改写为 TS，脱离 bash 回落引擎（US-PORT-022 part 1）

  v3.609.1 — 2026-06-09
    ### 自动化流水线
    - 把 dream 调度剩余子命令改写为 TS，脱离 bash 回落引擎（US-PORT-020）
    - 交付段补可重建证据轻量版，含合并请求与集成结论与改动与交付方与成本与时间线（US-EVID-008）
    - 二阶闭环把成功率趋势回灌做自整定：roll tune 只读聚合 self-score/agent pass 率/误判/rubric 相关性，产阈值-路由-rubric 三类建议（仅建议、样本门+冷却防失真）（US-EVID-015）
    ### 工程和测试
    - 确定性证据自动落盘，测试输出与覆盖率与产物都写进证据框（US-EVID-002）
    - attest 从迁移后的多故事 epic 文件抽取验收条目返回空，致已有 ac-map 的 Done 故事渲染成零条 AC（US-PORT-001 实证），改 resolveStoryAcItems 越过空壳 owner 取真 AC 文件（FIX-226）
    ### 其他
    - 把项目初始化命令改写为 TS，脱离 bash 回落引擎（US-PORT-013）
    - 把技能挂载与约定分发命令改写为 TS，脱离 bash 回落引擎（US-PORT-014）
    - 把在线刷新模型价目的命令改写为 TS，脱离 bash 回落引擎（US-PORT-017）
    - 把切换与设置 agent 的写入命令改写为 TS，脱离 bash 回落引擎（US-PORT-018）
    - 修退役命令引用并立一页新手上手指南（US-DOC-GS-001）
    - 证据框在每个周期开头就立好，运行目录与证据归处先备好交给执行用（US-EVID-001）
    - 瞬态证据当场采，改前改后与验证时各截一张成对入框（US-EVID-003）
    - 收尾时由运行器确定性组装验收报告并刷新档案，不依赖代理记得（US-EVID-004）
    - 验收硬闸默认开启，标完成却无报告从提醒升级为发版闸拦截（US-EVID-005）
    - 证据生命周期相关文档中英双轨刷新收尾（US-EVID-006）
    - 档案脊柱口径对齐，老的已完成卡一次性补跑回填证据（US-EVID-007）
    - 自评分作为评分门禁参与通过与否，回归或低分能真的拦下完成（US-EVID-013）
    - 无人值守执行器，出错先归因再自动纠正，默认保守且不自动合主干且振荡移交刹车 — report: \`.roll/features/acceptance-evidence/US-EVID-014/2026-06-08T23-03-10/US-EVID-014-report.html\`
    - 无人值守安全刹车，同卡反复退回自动熔断暂停并加一页夜间运行晨报 — report: \`.roll/features/acceptance-evidence/US-EVID-016/2026-06-08T23-54-55/US-EVID-016-report.html\`
    - 跨代理结对的中英双轨文档刷新收尾（US-PAIR-007）
    - roll init 顺带生成 pairing 配置并在界面告知，新用户少一步且仍显式（US-PAIR-008）
    - site: roll-build explainer page (site-aligned, bilingual) + homepage CTA（PR#546）
    - site: track site/diagrams/ + roll-build skill infographic（PR#545）
    - site: roll-build 技能卡可点击跳转讲解页（PR#547）

",
}
`;

exports[`diff-test: roll update == bash oracle > npm happy path → upgrade + setup + changelog (zh) 1`] = `
{
  "status": 0,
  "stderr": "",
  "stdout": "[roll] 当前版本: roll v3.609.2
[roll] 正在通过 npm 升级...


[roll] 正在重新同步到 AI 工具...

  SETUP  ·  初始化                                                                                  
────────────────────────────────────────────────────────────────────────────────

  1. ✓  Install templates & conventions to ~/.roll
  2. ✓  Sync conventions to AI tools
  3. ✓  Install skills to ~/.claude
  4. ✓  Initialize peer-review state directory
  5. ↷  Configure git hooks path
  6. ↷  Ensure tmux is installed (already present)

────────────────────────────────────────────────────────────────────────────────
  Setup complete (4 items refreshed)  —  run roll init inside a project
════════════════════════════════════════════════════════════════════════════════

最近更新:

  Unreleased

  v3.609.2 — 2026-06-09
    ### 可见性
    - 交付档案首页改表格视图：epic 列表以 Epic / Progress / Stories 表格呈现，扫读对齐更顺（US-DOSSIER-005）
    - 交付档案按证据标完成：迁移来的 V2 历史卡按其标题 ✅ 标记显示为已交付，不再因缺 v3 验收报告而全标未交付（US-DOSSIER-006）
    ### 其他
    - changelog generate 剔除已在某版本段发布的故事，不再在 Unreleased 过度累积；纯 PR / 手工条目保留（FIX-227）
    - roll release ship 的交互确认改为按行读 stdin，不再因等 EOF 在交互终端永久挂起（FIX-228）
    - 把 loop 日志与事件的只读子命令改写为 TS，脱离 bash 回落引擎（US-PORT-022 part 1）

  v3.609.1 — 2026-06-09
    ### 自动化流水线
    - 把 dream 调度剩余子命令改写为 TS，脱离 bash 回落引擎（US-PORT-020）
    - 交付段补可重建证据轻量版，含合并请求与集成结论与改动与交付方与成本与时间线（US-EVID-008）
    - 二阶闭环把成功率趋势回灌做自整定：roll tune 只读聚合 self-score/agent pass 率/误判/rubric 相关性，产阈值-路由-rubric 三类建议（仅建议、样本门+冷却防失真）（US-EVID-015）
    ### 工程和测试
    - 确定性证据自动落盘，测试输出与覆盖率与产物都写进证据框（US-EVID-002）
    - attest 从迁移后的多故事 epic 文件抽取验收条目返回空，致已有 ac-map 的 Done 故事渲染成零条 AC（US-PORT-001 实证），改 resolveStoryAcItems 越过空壳 owner 取真 AC 文件（FIX-226）
    ### 其他
    - 把项目初始化命令改写为 TS，脱离 bash 回落引擎（US-PORT-013）
    - 把技能挂载与约定分发命令改写为 TS，脱离 bash 回落引擎（US-PORT-014）
    - 把在线刷新模型价目的命令改写为 TS，脱离 bash 回落引擎（US-PORT-017）
    - 把切换与设置 agent 的写入命令改写为 TS，脱离 bash 回落引擎（US-PORT-018）
    - 修退役命令引用并立一页新手上手指南（US-DOC-GS-001）
    - 证据框在每个周期开头就立好，运行目录与证据归处先备好交给执行用（US-EVID-001）
    - 瞬态证据当场采，改前改后与验证时各截一张成对入框（US-EVID-003）
    - 收尾时由运行器确定性组装验收报告并刷新档案，不依赖代理记得（US-EVID-004）
    - 验收硬闸默认开启，标完成却无报告从提醒升级为发版闸拦截（US-EVID-005）
    - 证据生命周期相关文档中英双轨刷新收尾（US-EVID-006）
    - 档案脊柱口径对齐，老的已完成卡一次性补跑回填证据（US-EVID-007）
    - 自评分作为评分门禁参与通过与否，回归或低分能真的拦下完成（US-EVID-013）
    - 无人值守执行器，出错先归因再自动纠正，默认保守且不自动合主干且振荡移交刹车 — report: \`.roll/features/acceptance-evidence/US-EVID-014/2026-06-08T23-03-10/US-EVID-014-report.html\`
    - 无人值守安全刹车，同卡反复退回自动熔断暂停并加一页夜间运行晨报 — report: \`.roll/features/acceptance-evidence/US-EVID-016/2026-06-08T23-54-55/US-EVID-016-report.html\`
    - 跨代理结对的中英双轨文档刷新收尾（US-PAIR-007）
    - roll init 顺带生成 pairing 配置并在界面告知，新用户少一步且仍显式（US-PAIR-008）
    - site: roll-build explainer page (site-aligned, bilingual) + homepage CTA（PR#546）
    - site: track site/diagrams/ + roll-build skill infographic（PR#545）
    - site: roll-build 技能卡可点击跳转讲解页（PR#547）

",
}
`;
